--- a/prueba (2)/prueba/src/app/components/index/index.component.html
+++ b/prueba (2)/prueba/src/app/components/index/index.component.html
@@ -1,25 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
   <div class="container-fluid">
-    <a class="navbar-brand"  routerLinkActive="router-link-active">TecnoTruck</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand mr-4" routerLinkActive="router-link-active">TecnoTruck</a> <!-- Agregar clase mr-4 para espacio -->
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <hr>
-      <ul class="navbar-nav"> 
-
+      <ul class="navbar-nav ml-auto"> <!-- Alinear a la derecha -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" [routerLink]="['crud']" routerLinkActive="router-link-active">Home</a>
         </li>
-        <li class="nav-item" >
-          <br>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['logs']" routerLinkActive="router-link-active">Sensores</a>
         </li>
-        <li class="nav-item" >
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['ordenventa']" routerLinkActive="router-link-active">Creditos</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['info']" routerLinkActive="router-link-active" >Login</a>
+        <li class="nav-item ml-auto"> <!-- Alinear a la derecha -->
+          <a class="nav-link" [routerLink]="['info']" routerLinkActive="router-link-active">Login</a>
         </li>
       </ul>
     </div>
